--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chain shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+
+    <div>
+        <h1>Welcome to our website</h1>
+    </div>
+        <img src="images\hpic1.png">
+    <div>
+        <h2>About Us</h2>
+        <h2>Contact Us</h2>
+        <h2>More Information</h2>
+    </div>
 </body>
 </html>
